--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "czim/hellodialog",
-    "description": "HelloDialog e-mail marketing API handler [no longer supported!]",
+    "description": "HelloDialog e-mail marketing API handler",
     "keywords": [
         "hellodialog",
         "email-marketing"
