--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     ],
     "homepage": "https://github.com/Hellodialog/api-wrapper",
     "license": "MIT",
+    "version": "v1.0.0",
     "authors": [
         {
             "name": "Bart Ros",
