--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,10 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "laravel/framework": "5.4.36",
         "guzzlehttp/guzzle": "^6.0",
+        "guzzlehttp/promises": "1.3.1",
+        "guzzlehttp/psr7": "1.6.1",
         "myclabs/php-enum": "^1.4"
     },
     "require-dev": {
